hashtag search is workinggit add .!